# vade-sidetree

./: .gitlab-ci.yml  Cargo.toml  README.md  VERSIONS.md
.cargo/: config
.github/: test.yml
.github/workflows/: test.yml
sidetree-client/: Cargo.toml  README.md
sidetree-client/src/: did.rs  encoder.rs  lib.rs  multihash.rs  operations.rs  secp256k1.rs
src/: datatypes.rs  helper.rs  in3_request_list.rs  lib.rs  vade_sidetree.rs
src/vade_sidetree_client/: did.rs  mod.rs  multihash.rs  operations.rs  secp256k1.rs
typings/: index.d.ts  package.json  vade_sidetree.d.ts
vade-sidetree-client/: Cargo.toml
vade-sidetree-client/src/: did.rs  encoder.rs  lib.rs  multihash.rs  operations.rs  secp256k1.rs
