[package]
name = "vade-sidetree"
version = "0.0.4"
authors = ["evan GmbH", "Blockchains Inc."]
edition = "2018"
license-file = "LICENSE.txt"
description = "handling DIDs based on sidetree implementation"
readme = "README.md"
keywords = ["did", "ssi"]

[lib]
name = "vade_sidetree"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["web-requests"]

# Defines a feature named `sdk`, this feature should be enabled when plugin is compiled for IN3 sdk
sdk = []

web-requests = ["reqwest"]

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.31"
base64 = "0.13.0"
bitflags = "1.2"
cfg-if = "0.1"
env_logger = "0.7.1"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4.17" # pinned version for dependency of `async-std`
libsecp256k1 = "0.5"
multihash = "0.13"
regex = { version = "1.3.7" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.5"
vade = "0.1.0"
serde_jcs = "0.1"

[dev-dependencies]
tokio = { version = "=1.7.1", features = ["macros", "rt-multi-thread"] }
serial_test = "0.5.1"
